data/derived/comb/progs/unify/prog6975.ml.out
Characters 37-43:
  let rec fs x = ((fs b), (f b) = b)
                  ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
